Update cards padding to 10 % to prevent text overflow in different screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,7 +134,7 @@
   border-radius: 2%;
   margin-bottom: 30%;
   box-shadow: 5px 10px rgba(60, 60, 60, .6);
-  padding-bottom: 5%;
+  padding-bottom: 10%;
 }
 
 .cards:hover {
